--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,10 @@ jobs:
           node-version: '18'
           
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         
       - name: Build
         run: npm run build
-        
-      - name: Export
-        run: npm run export
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
