--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build
         run: npm run build
         
+      - name: List build output
+        run: ls -R out
+        
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
