--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,28 +3,31 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Set this to your default branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Build
         run: npm run build
-        
-      - name: List build output
-        run: ls -R out
-        
+
+      - name: Export
+        run: npm run export
+
+      - name: Add .nojekyll file
+        run: touch out/.nojekyll
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
