Revert "fixing everything i knew"
This reverts commit 97f731d3205c14c1906c43d4fc98689ae9e69875.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,3 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "root": true,
-  "rules": {
-    "react/no-unescaped-entities": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
