--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build and Export
+      - name: Build
         run: npm run build
 
       - name: Add .nojekyll file
