--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.6",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "parse-json": "^8.1.0",
     "react": "^18",
